# This file is a part of Geeqie project (https://www.geeqie.org/).
# Copyright (C) 2008 - 2022 The Geeqie Team
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#

pan_view_sources = files('pan-calendar.c',
'pan-calendar.h',
'pan-folder.c',
'pan-folder.h',
'pan-grid.c',
'pan-grid.h',
'pan-item.c',
'pan-item.h',
'pan-timeline.c',
'pan-timeline.h',
'pan-types.h',
'pan-util.c',
'pan-util.h',
'pan-view.c',
'pan-view-filter.c',
'pan-view-filter.h',
'pan-view.h',
'pan-view-search.c',
'pan-view-search.h')
project_sources += pan_view_sources
